# horizon-data

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  design-preview-f1.html  design-preview-halo.html  design-preview-soft-frame.html  index.html  package-lock.json  package.json  preview.html  server.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: TODO.md  forza-horizon-6-telemetry.md  overlay-design.md
reference/: forzaPacket.ts  forza_packet.py
src/: App.vue  dragwin.ts  main.ts  style.css  telemetry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/views/: Gforce.vue  Grip.vue  HudMain.vue  Inputs.vue  Settings.vue  TireInfo.vue  TireTemp.vue  TrayControls.vue
tools/: fake-send.ts  gen-icon.mjs  udp-listen.ts
